trying to fix the stretching problem

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ svg {
   max-height: 100%;
   height: auto;
   font-style: italic;
+  object-fit: cover;
 }
 
 /* Fix input styles */
